tests/ui/tee.stderr
error[E0432]: unresolved import `itertools`
 --> tests/ui/tee.rs:1:5
  |
1 | use itertools::Itertools;
  |     ^^^^^^^^^ use of undeclared crate or module `itertools`

error[E0599]: no method named `tee` found for struct `std::slice::Iter` in the current scope
 --> tests/ui/tee.rs:6:29
  |
6 |     let (a0, a1) = a.iter().tee();
  |                             ^^^ method not found in `Iter<'_, ({integer}, {integer})>`
  |
 ::: $CARGO/itertools-0.10.5/src/lib.rs
  |
  |     fn tee(self) -> (Tee<Self>, Tee<Self>)
  |        --- the method is available for `std::slice::Iter<'_, ({integer}, {integer})>` here
  |
  = help: items from traits can only be used if the trait is in scope
help: the following trait is implemented but not in scope; perhaps add a `use` for it:
    |
1   + use itertools::Itertools;
    |

warning: unused import: `range_set_blaze::prelude`
 --> tests/ui/tee.rs:2:5
  |
2 | use range_set_blaze::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
